--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -17,7 +17,8 @@
         android:indeterminate="true"
         android:indeterminateTintMode="src_atop"
         android:indeterminateTint="@color/colorPrimary"
-        android:visibility="gone"/>
+        android:visibility="gone"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
